[project]
name = "hfs3"
version = "0.1.0"
description = "Stream HuggingFace repositories directly to S3"
authors = [{ name = "fecet", email = "xiezej@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub",
    "s3fs",
    "rich",
    "typer",
]

[project.scripts]
hfs3 = "hfs3.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hfs3"]
